welcome.lessons.welcome.bat.bool2.NearTen.scala.code
def nearTen(num:Int):Boolean = {

	return (n % 10 == 0 || n % 10 == 1 || n%10 == 2 || n % 10 == 8 || n%10 == 9);
}
